--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "prettier": "^3.1.1"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "chalk": "^5.3.0",
-    "esbuild-plugin-copy": "^2.1.1"
+    "esbuild-plugin-copy": "^2.1.1",
+    "i18n": "^0.15.1",
+    "i18next": "^24.2.0"
   }
 }
