#26009 removed redundat code, implemented new layout

--- a/plugin-manifest.json
+++ b/plugin-manifest.json
@@ -1,8 +1,8 @@
 {
-  "id": "flotiq.google-search-console",
-  "name": "Google Search Console plugin",
+  "id": "flotiq.google-search-console-dev",
+  "name": "Google Search Console plugin dev",
   "description": "This plugin integrates with Google Search Console to check the status of indexing for each page",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "repository": "https://github.com/flotiq/flotiq-ui-plugin-google-search-console",
   "url": "https://localhost:3053/index.js",
   "permissions": [
