--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^5.3.0",
     "esbuild-plugin-copy": "^2.1.1",
     "i18n": "^0.15.1",
-    "i18next": "^24.2.0"
+    "i18next": "^24.2.0",
+    "moment": "^2.30.1"
   }
 }
