add sitemap and trigger reindex

--- a/plugin-manifest.json
+++ b/plugin-manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "flotiq.google-search-console",
-  "name": "Google Search Console plugin",
+  "id": "flotiq.google-search-console_dev",
+  "name": "DEV Google Search Console plugin",
   "description": "This plugin integrates with Google Search Console to check the status of indexing for each page",
   "version": "0.4.1",
   "repository": "https://github.com/flotiq/flotiq-ui-plugin-google-search-console",
