--- a/plugin-manifest.json
+++ b/plugin-manifest.json
@@ -1,8 +1,8 @@
 {
-  "id": "flotiq.google-search-console_dev",
+  "id": "flotiq.google-search-console",
   "name": "DEV Google Search Console plugin",
   "description": "This plugin integrates with Google Search Console to check the status of indexing for each page",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "repository": "https://github.com/flotiq/flotiq-ui-plugin-google-search-console",
   "url": "https://localhost:3053/index.js",
   "permissions": []
